<resources>
    <string name="app_name">JuiceBook</string>
    <string name="title_activity_splashscreen">SplashscreenActivity</string>
    <string name="buttonIngresar">Iniciar Sesion</string>
    <string name="buttonRegistrar">Registrate</string>
    <string name="user">Correo</string>
    <string name="password">contraseña</string>
    <string name="password2">Repetir contraseña</string>
    <string name="ingresar">INGRESAR</string>
    <string name="registrar">Registrar</string>
    <string name="olvido_contrasena">¿Se te olvido la contraseña? Click aquí</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_navigation">Navigation</string>
</resources>