<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellowDark"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:padding="24dp"
            android:paddingTop="16dp"
            >

            <ImageView
                android:id="@+id/Logo1"
                android:layout_width="320dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:transitionName="LogoImageTrans"
                android:layout_marginTop="50dp"
                app:srcCompat="@drawable/logo"
                 />
            <TextView
                android:id="@+id/juiceBookTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="132dp"
                android:text="@string/app_name"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:transitionName="textTrans"
                >

            </TextView>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/correo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="3"
                    android:background="@drawable/style1"
                    android:drawableStart="@drawable/ic_usuario"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:hint="@string/user"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:textSize="20sp"
                    tools:ignore="TouchTargetSizeCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/contrasena"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp"
                    android:textSize="20sp"
                    android:layout_weight="3"
                    android:background="@drawable/style1"
                    android:drawableStart="@drawable/ic_contrasena"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:hint="@string/password"
                    android:importantForAutofill="no"
                    tools:ignore="TouchTargetSizeCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/buttonIngresar"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="2"
                android:background="@color/colorPrimaryDark"
                android:drawablePadding="10dp"
                android:ems="10"
                android:gravity="center"
                android:textColor="@color/white"
                android:onClick="irIniciar"
                android:text="@string/ingresar"
                android:textSize="16sp"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/textViewRegistar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:onClick="irRegistrar"
                android:text="@string/registrar"
                android:textSize="18sp"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/textViewRecordarPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/olvido_contrasena"
                android:gravity="center"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginBottom="95dp"
                android:textSize="16sp"
                android:textColor="@color/black"
                />

        </LinearLayout>
    </ScrollView>
</LinearLayout>