<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrarActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="22dp"
        android:paddingTop="16dp"
        android:background="@drawable/fondo_redondo"
        >

        <ImageView
            android:id="@+id/Logo1"
            android:layout_width="320dp"
            android:layout_height="145dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="132dp"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="19sp">
        </TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:textSize="22sp"
                android:layout_weight="3"
                android:background="@drawable/style2"
                android:drawableStart="@drawable/ic_usuario"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/user"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                tools:ignore="TouchTargetSizeCheck"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/contrasena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="40dp"
                android:textSize="22sp"
                android:layout_weight="3"
                android:background="@drawable/style2"
                android:drawableStart="@drawable/ic_contrasena"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                tools:ignore="TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/contrasenaConfirmacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="60dp"
                android:layout_weight="3"
                android:textSize="22sp"
                android:background="@drawable/style2"
                android:drawableStart="@drawable/ic_contrasena"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/password2"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                tools:ignore="TouchTargetSizeCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/registrarbtn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="2"
            android:background="@color/colorPrimaryDark"
            android:drawablePadding="10dp"
            android:ems="10"
            android:textSize="18sp"
            android:gravity="center"
            android:onClick="registrarUsuario"
            android:text="@string/buttonRegistrar"
            android:textColor="@color/black"
            tools:ignore="OnClick,TouchTargetSizeCheck" />
    </LinearLayout>

</ScrollView>